# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "vxtwitterify"
version = "0.0.0"
edition = "2021"


[dependencies.regex]
version = "1.6.0"

[dependencies.twilight-gateway]
version = "0.13.0"

[dependencies.twilight-http]
version = "0.13.0"

[dependencies.tokio]
version = "1.20.1"
features = ["full"]
