# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "vxtwitterify"
version = "0.0.0"
edition = "2021"


[dependencies.dotenvy]
version = "0.15.3"

[dependencies.futures]
version = "0.3.24"

[dependencies.lazy_static]
version = "1.4.0"

[dependencies.regex]
version = "1.6.0"

[dependencies.twilight-gateway]
version = "0.13.0"

[dependencies.twilight-http]
version = "0.13.0"

[dependencies.twilight-model]
version = "0.13.2"

[dependencies.tokio]
version = "1.20.1"
features = ["full"]
